--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -11,7 +11,8 @@
   },
   "settings": {
     "version": {
-      "select": "データバーションを選択"
+      "select": "データバージョンを選択",
+      "info": "異なるデータバージョンは、異なる内部レベル値と異なる曲の可視性に対応します。"
     }
   },
   "sheet": {
@@ -40,7 +41,7 @@
       "song-artist": "ソングアーティスト",
       "title": "詳細"
     },
-    "filter-current-version": "現在稼动バーションのB15: {{version}} 譜面のみを表示",
+    "filter-current-version": "現在稼动バージョンのB15: {{version}} 譜面のみを表示",
     "internal-level-history": {
       "empty": "利用可能な履歴はありません",
       "title": "譜面定数履歴"
