feat: add topbar

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -7,6 +7,10 @@
       "rating": {
         "title": "My Rating"
       }
+    },
+    "share": {
+      "copy-succeeded": "Copied to clipboard",
+      "copy-content": "{link}"
     }
   },
   "settings": {
