--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -10,7 +10,7 @@
     },
     "share": {
       "copy-succeeded": "Copied to clipboard",
-      "copy-content": "{link}"
+      "copy-content": "{{ link }}"
     }
   },
   "settings": {
