--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -46,6 +46,7 @@
       "empty": "利用可能な履歴はありません",
       "title": "譜面定数履歴"
     },
-    "search-summary": "{{found}} / {{total}} 譜面 ({{elapsed}}ミリ秒)"
+    "search-summary": "{{found}} / {{total}} 譜面 ({{elapsed}}ミリ秒)",
+    "release-date": "追加日 {{absoluteDate}} ({{relativeDate}})"
   }
 }
