--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -80,10 +80,10 @@
   "form": {
     "validation": {
       "min": {
-        "message": "\"{fieldName}\" must be greater than or equal to {value}"
+        "message": "\"{{fieldName}}\" must be greater than or equal to {{value}}"
       },
       "max": {
-        "message": "\"{fieldName}\" must be less than or equal to {value}"
+        "message": "\"{{fieldName}}\" must be less than or equal to {{value}}"
       }
     }
   }
