feat: add support for zh-Hant

--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -35,7 +35,7 @@
       "chart-designer": "制谱",
       "credits": "部分数据来自 <link />",
       "notes-statistics": {
-        "break": "绝赞 (Break)",
+        "break": "Break",
         "hold": "Hold",
         "slide": "Slide",
         "tap": "Tap",
