feat(app): add version filter

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -55,7 +55,8 @@
     "filter": {
       "internal-level-value": {
         "min": "Level (min, inclusive)",
-        "max": "Level (max, inclusive)"
+        "max": "Level (max, inclusive)",
+        "title": "Level"
       }
     }
   },
