feat: add sorts

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -57,6 +57,21 @@
         "min": "Level (min, inclusive)",
         "max": "Level (max, inclusive)",
         "title": "Level"
+      },
+      "version": {
+        "title": "Added Version"
+      }
+    },
+    "sort": {
+      "add": "Add Sort",
+      "predicate": "Predicate #{{index}}",
+      "release-date": {
+        "desc": "Release Date (New → Old)",
+        "asc": "Release Date (Old → New)"
+      },
+      "internal-level-value": {
+        "desc": "Level (High → Low)",
+        "asc": "Level (Low → High)"
       }
     }
   },
