--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -57,7 +57,13 @@
         "min": "定数 (大于或等于)",
         "max": "定数 (小于或等于)",
         "title": "定数"
+      },
+      "version": {
+        "title": "追加版本"
       }
+    },
+    "sort": {
+      "add": "添加排序规则"
     }
   },
   "about": {
