--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -53,6 +53,7 @@
     },
     "release-date": "Released {{absoluteDate}} ({{relativeDate}})",
     "filter": {
+      "title": "Filter",
       "internal-level-value": {
         "min": "Level (min, inclusive)",
         "max": "Level (max, inclusive)",
@@ -63,16 +64,21 @@
       }
     },
     "sort": {
+      "title": "Sort",
       "add": "Add Sort",
       "predicate": "Predicate #{{index}}",
       "release-date": {
-        "desc": "Release Date (New → Old)",
-        "asc": "Release Date (Old → New)"
+        "asc": "Release Date (Old → New)",
+        "desc": "Release Date (New → Old)"
       },
       "internal-level-value": {
-        "desc": "Level (High → Low)",
-        "asc": "Level (Low → High)"
+        "asc": "Level (Low → High)",
+        "desc": "Level (High → Low)"
       }
+    },
+    "sort-and-filter": {
+      "title": "Filter & Sort",
+      "reset": "Reset..."
     }
   },
   "about": {
