--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -109,5 +109,11 @@
         "message": "“{{fieldName}}”必须大于或等于 {{value}}"
       }
     }
+  },
+  "global": {
+    "gesture-hint": {
+      "tap": "点按",
+      "tap-hold": "长按"
+    }
   }
 }
