--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -60,7 +60,11 @@
         "title": "譜面定数"
       },
       "version": {
-        "title": "追加バージョン"
+        "title": "追加バージョン",
+        "gesture-hint": {
+          "tap": "トグル",
+          "tap-hold": "エクスクルーシブ"
+        }
       }
     },
     "sort": {
@@ -99,6 +103,10 @@
     "aliases": {
       "yuri-yuzuchan-maimaidx": "楽曲別名 (中国語)",
       "lomotos10-gcmbot": "楽曲別名 (英語、韓国語、ローマ字)"
+    },
+    "disclaimer": {
+      "title": "免責事項",
+      "content": "DXRating はどのゲーム会社とも提携していません。本サイトは素材の権利を所有しておらず、全ての権利はセガを含む権利所有者に帰属します。本サイトは研究を目的としたファンメイドのデータベースであり、セガとは関係ありません。当サイトは、掲載されている情報の利用により生じたいかなる損失・損害についても責任を負いません。ご質問やご提案がございましたら、著者までご連絡ください。"
     }
   },
   "form": {
