--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -103,6 +103,10 @@
     "aliases": {
       "yuri-yuzuchan-maimaidx": "乐曲别名 (中文)",
       "lomotos10-gcmbot": "乐曲别名 (英文、韩文与罗马音)"
+    },
+    "disclaimer": {
+      "title": "免责声明",
+      "content": "DXRating 不隶属于任何游戏公司。本站使用的任何资产仅供非商业用途，所有权利均属于其各自所有者。本站对因使用所提供的信息而造成的任何损失或损害不承担任何责任。如果您有任何疑问或建议，欢迎联系本站作者。"
     }
   },
   "form": {
