fix: i18n, theme issues

--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -63,7 +63,7 @@
         "title": "追加バージョン",
         "gesture-hint": {
           "tap": "トグル",
-          "tap-hold": "エクスクルーシブ"
+          "tap-hold": "◯のみ"
         }
       }
     },
