chore: add afdian + paypal links

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -115,6 +115,12 @@
     "disclaimer": {
       "title": "Disclaimer",
       "content": "DXRating is not affiliated with any game company. Any assets used in this website are for non-commercial purposes only, and all rights belong to their respective owners. This website is not responsible for any loss or damage caused by the use of the information provided. If you have any questions or suggestions, you are welcome to contact the author."
+    },
+    "donate": {
+      "title": "Donate",
+      "content": "I would be so grateful if DXRating could help you out in any way! DXRating will always be completely free and will run purely on donations. If you find DXRating to be useful, please consider supporting me via <afdian /> or <paypal />!",
+      "afdian": "Afdian",
+      "paypal": "PayPal"
     }
   },
   "form": {
