--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -115,6 +115,11 @@
     "disclaimer": {
       "title": "免责声明",
       "content": "DXRating 不隶属于任何游戏公司。本站使用的任何资产仅供非商业用途，所有权利均属于其各自所有者。本站对因使用所提供的信息而造成的任何损失或损害不承担任何责任。如果您有任何疑问或建议，欢迎联系本站作者。"
+    },
+    "donate": {
+      "afdian": "爱发电",
+      "title": "捐助",
+      "content": "感谢使用 DXRating！如果 DXRating 可以在 maimai 生涯中帮助到你的话，开发者会很开心的！DXRating 全站将一直会非商业化运营并将仅依靠捐款（和站长为爱发电QAQ）存活下去。如果 DXRating 有帮助到你的话，还请考虑通过 <afdian /> 或 <paypal /> 请开发者出一次勤——"
     }
   },
   "form": {
