feat(app): add tag filter

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -65,6 +65,9 @@
           "tap": "Toggle",
           "tap-hold": "Select"
         }
+      },
+      "tags": {
+        "title": "Tags"
       }
     },
     "sort": {
