--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -65,6 +65,9 @@
           "tap": "トグル",
           "tap-hold": "のみ"
         }
+      },
+      "tags": {
+        "title": "タグ"
       }
     },
     "sort": {
