--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -65,6 +65,9 @@
           "tap": "切换",
           "tap-hold": "单选"
         }
+      },
+      "tags": {
+        "title": "标签"
       }
     },
     "sort": {
