feat: add genre filter

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -68,6 +68,9 @@
       },
       "tags": {
         "title": "Tags"
+      },
+      "category": {
+        "title": "Genre"
       }
     },
     "sort": {
