--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -68,6 +68,9 @@
       },
       "tags": {
         "title": "タグ"
+      },
+      "category": {
+        "title": "ジャンル"
       }
     },
     "sort": {
