--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -68,6 +68,9 @@
       },
       "tags": {
         "title": "标签"
+      },
+      "category": {
+        "title": "樂曲種類"
       }
     },
     "sort": {
