--- a/apps/web/src/locales/resources/zh-Hant.json
+++ b/apps/web/src/locales/resources/zh-Hant.json
@@ -68,6 +68,9 @@
       },
       "tags": {
         "title": "標籤"
+      },
+      "category": {
+        "title": "類型"
       }
     },
     "sort": {
