--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -14,9 +14,17 @@
     }
   },
   "settings": {
-    "version": {
-      "select": "データバージョンを選択",
-      "info": "異なるデータバージョンは、異なる内部レベル値と異なる曲の可視性に対応します。"
+    "region": {
+      "title": "地域：{{region}}",
+      "jp": "日本",
+      "intl": "International",
+      "cn": "中国",
+      "_generic": "汎用"
+    },
+    "version-and-region": {
+      "info": "異なるデータバージョンと地域は、異なる内部レベル値と異なる曲の可視性に対応します",
+      "select": "データバージョンと地域を選択",
+      "select-generic": "または、データバージョンを選択し、「汎用」リージョンを使用する"
     }
   },
   "sheet": {
