feat: add server-side alias support

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -165,6 +165,9 @@
     "login": {
       "label": "Login",
       "toast-success": "Successfully logged in."
+    },
+    "update-display-name": {
+      "label": "Update Profile Name"
     }
   }
 }
