feat: add unlock required

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -57,7 +57,8 @@
         "title": "Achievement → Rating",
         "achievement": "Achv.",
         "rating": "Rating"
-      }
+      },
+      "unlock-required": "Unlock Required"
     },
     "release-date": "Released {{absoluteDate}} ({{relativeDate}})",
     "filter": {
