feat: add difficulty filter

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -80,6 +80,13 @@
       },
       "category": {
         "title": "Genre"
+      },
+      "difficulty": {
+        "title": "Difficulty",
+        "gesture-hint": {
+          "tap": "Toggle",
+          "tap-hold": "Select"
+        }
       }
     },
     "sort": {
