--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -79,6 +79,13 @@
       },
       "category": {
         "title": "ジャンル"
+      },
+      "difficulty": {
+        "title": "難易度",
+        "gesture-hint": {
+          "tap": "トグル",
+          "tap-hold": "のみ"
+        }
       }
     },
     "sort": {
