Feature： 增加水鱼查分器B50导入功能

--- a/apps/web/src/locales/resources/en.json
+++ b/apps/web/src/locales/resources/en.json
@@ -168,6 +168,11 @@
     },
     "update-display-name": {
       "label": "Update Profile Name"
+    },
+    "update-diving-fish-profile": {
+      "label": "Update Diving Fish Profile",
+      "diving-fish-name": "diving-fish-name",
+      "diving-fish-qq": "diving-fish-qq"
     }
   }
 }
